blockbuilder factory pattern